Fix issue with w3 validator checks

--- a/about.html
+++ b/about.html
@@ -28,9 +28,14 @@
         <div id="about-me-info">
           <details>
             <Summary>Bio</Summary>
-            <p>
-              <strong>Lorem ipsum dolor sit amet,</strong> consectetur adipiscing elit. Pellentesque placerat maximus lacus lobortis sagittis. Donec non ultrices sapien. In eros libero, efficitur ac urna non, volutpat ornare turpis. Nam molestie mollis semper. Phasellus mollis justo orci, a porta turpis ultrices vitae. Donec consequat risus vel blandit euismod. Duis in augue congue leo tempus lobortis vitae eleifend magna. Vestibulum sed fermentum elit. Curabitur vehicula, neque non pharetra euismod, nunc ipsum dapibus lacus, vitae sodales nibh magna accumsan turpis. Sed vestibulum nisl in elit volutpat, eget pretium dolor accumsan. Cras et enim at tellus luctus ultricies vel eu tellus. Aliquam sodales nisi sit amet placerat porttitor.
-            </p>
+            <pre>
+              <strong>Lorem ipsum dolor sit amet,</strong> consectetur adipiscing elit. Pellentesque placerat maximus lacus lobortis sagittis. 
+              Donec non ultrices sapien. In eros libero, efficitur ac urna non, volutpat ornare turpis. Nam molestie mollis semper. Phasellus 
+              mollis justo orci, a porta turpis ultrices vitae. Donec consequat risus vel blandit euismod. Duis in augue congue leo tempus lobortis 
+              vitae eleifend magna. Vestibulum sed fermentum elit. Curabitur vehicula, neque non pharetra euismod, nunc ipsum dapibus lacus, vitae 
+              sodales nibh magna accumsan turpis. Sed vestibulum nisl in elit volutpat, eget pretium dolor accumsan. Cras et enim at tellus luctus 
+              ultricies vel eu tellus. Aliquam sodales nisi sit amet placerat porttitor.
+            </pre>
           </details>
         </div>
       </aside>
