Fix w3 validation errors

--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,19 @@
             <ul class="social">
               <li>
                 <a href="https://www.linkedin.com/in/mark-bussard/"  target="_blank">
-                  <img src="images/linkedin-icon.svg" height="18" width="18" />
+                  <img src="images/linkedin-icon.svg" height="18" width="18" alt="linkedin" />
                 </a>
               </li>
               <li>
                 <a href="https://github.com/markbussard" target="_blank">
-                  <img src="images/github-icon.svg" height="22" width="22" />
+                  <img src="images/github-icon.svg" height="22" width="22" alt="github" />
                 </a>
               </li>
             </ul>
           </menu>
         </header>
         <main>
-          <section id="contact" class="section-full-page contact">
+          <section class="section-full-page contact">
             <div class="section-main-content contact-info">
               <header>
                 <h2 class="section-header">
