--- a/experience.html
+++ b/experience.html
@@ -38,12 +38,12 @@
             <ul class="social">
               <li>
                 <a href="https://www.linkedin.com/in/mark-bussard/" target="_blank">
-                  <img src="images/linkedin-icon.svg" height="18" width="18" />
+                  <img src="images/linkedin-icon.svg" height="18" width="18" alt="linkedin" />
                 </a>
               </li>
               <li>
                 <a href="https://github.com/markbussard" target="_blank">
-                  <img src="images/github-icon.svg" height="22" width="22" />
+                  <img src="images/github-icon.svg" height="22" width="22" alt="github" />
                 </a>
               </li>
             </ul>
@@ -51,7 +51,7 @@
         </header>
         <main>
           <!-- Skills & Experience -->
-          <section id="skills" class="section-full-page skills">
+          <section class="section-full-page skills">
             <div class="section-main-content skills-info">
               <h2 class="section-header">
                 Experience
@@ -72,7 +72,7 @@
                 months I jumped into working with React. For this reason, I have recently started exploring
                 and attempting to build a more solid understanding of JavaScript without the use of frameworks.
               </p>
-              <p>View my <a style='color: #000; cursor: pointer;' href="https://www.linkedin.com/in/mark-bussard/" target="_blank">LinkedIn</a> profile for more details or feel free to <a style='color: #000; cursor: pointer;' href="contact.html">contact</a> me.</span>
+              <p>View my <a style='color: #000; cursor: pointer;' href="https://www.linkedin.com/in/mark-bussard/" target="_blank">LinkedIn</a> profile for more details or feel free to <a style='color: #000; cursor: pointer;' href="contact.html">contact</a> me.
             </div>
             <div class="skills-details">
               <div id="skills-canvas-container">
