Fix more w3 validation errors

--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
             <div class="bar-2"></div>
             <div class="bar-3"></div>
           </div>
-          <menu class="main-menu">
+          <div class="main-menu">
             <div class="main-menu__top">
               <a href="index.html">
                 <span>Mark</span>
@@ -47,7 +47,7 @@
                 </a>
               </li>
             </ul>
-          </menu>
+          </div>
         </header>
         <main>
           <!-- Skills & Experience -->
