--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             <div class="bar-2"></div>
             <div class="bar-3"></div>
           </div>
-          <menu class="main-menu">
+          <div class="main-menu">
             <div class="main-menu__top">
               <a href="index.html">
                 <span>Mark</span>
@@ -45,7 +45,7 @@
                 </a>
               </li>
             </ul>
-          </menu>
+          </div>
         </header>
         <main>
           <section class="section-full-page projects">
