Updates for eds124br

--- a/projects.html
+++ b/projects.html
@@ -25,48 +25,7 @@
                   Some things I've built
                 </h2>
               </header>
-              <p>
-                Outside of my academic school programming assignments and my work, 
-                I also enjoy exploring new technologies, whether it's a framework, 
-                new language or an API. These days it's usually anything web related.
-              </p>
-              <p>
-                By working on my own projects, I'm able to revisit any problems I've 
-                encountered in the past, and figured out better approaches to go about 
-                solving them. Essentially figure out what I wanted to do differently 
-                (maybe not exactly, but similar) and implement it to see any improvements.
-              </p>
-              <p>
-                I've especially become interested in realtime enabled features, such as 
-                Chat applications, or through collaborative work in writing through text editors. 
-              </p>
-            </div>
-            <div class="projects-details">
-              <div class="project-card">
-                <header>ZenCMS</header>
-                <section>
-                  Content Management System
-                  <p>
-                    An application that provides project management tools, similar to sites like 
-                    Jira, Clickup, etc.
-                  </p>
-                </section>
-                <footer>
-                  React, GraphQL, MongoDB, Express, Node.js
-                </footer>
-              </div>
-              <div class="project-card">
-                <header>Conversations App</header>
-                <section>
-                  Chat Application
-                  <p>
-                    A conversations app implementing using Twilio Conversations API.
-                  </p>
-                </section>
-                <footer>
-                  React, Styled Components, Node.js, Twilio
-                </footer>
-              </div>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WwN-2I4lep4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </section>
         </main>
