--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,9 @@
                 </h2>
               </header>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/WwN-2I4lep4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <br />
+              <br />
+              <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/fz4SmArYVrsT?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
             </div>
           </section>
         </main>
