--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,12 @@
                 Example Sequences: Animal Parade
               </h4>
               <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/zk_xxx4hazd5?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
+              <br />
+              <br />
+              <h4 style="font-weight: 400; text-decoration: underline;">
+                Variables Example: Draw a triangle, sqare and rectangle
+              </h4>
+              <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/d3tZJy_XVZzj?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
             </div>
           </section>
         </main>
