add one more vid

--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,12 @@
                 Variables Example: Draw a triangle, sqare and rectangle
               </h4>
               <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/d3tZJy_XVZzj?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
+              <br />
+              <br />
+              <h4 style="font-weight: 400; text-decoration: underline;">
+                Conditional Loops: Write a Program
+              </h4>
+              <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/sckBM7Dm15V6?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
             </div>
           </section>
         </main>
