--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,11 @@
                 Show What You Know: If-Else With Bullseye
               </h4>
               <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/kpowHaZVAiMZ?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
+
+              <h4 style="font-weight: 400; text-decoration: underline;">
+                Show What You Know: Nested If Else
+              </h4>
+              <iframe width="600" height="338" frameBorder="0" src="https://flip.com/s/acnfsYbPJGT1?embed=true" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="microphone; camera; display-capture"></iframe>
             </div>
           </section>
         </main>
